Added DFS and BFS. +comments

--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
     "\n",
     "class Vertex:\n",
     "    def __init__(self, id: int, balance=None, *args, **kwargs):\n",
@@ -27,8 +28,9 @@
     "        self.is_directed = is_directed\n",
     "    \n",
     "    def print_graph(self):\n",
-    "        #print({k.id: [val.id for val in values] for k, values in self.graph.items()})\n",
-    "        print(self.graph)\n",
+    "        # Info: indices \n",
+    "        vertex, weight = 0, 1\n",
+    "        print({v.id: [(edge[vertex].id, edge[weight]) for edge in edges] for v, edges in self.graph.items()})\n",
     "        return None\n",
     "    \n",
     "    def add_vertex(self, v: Vertex):\n",
@@ -37,16 +39,15 @@
     "            return 1\n",
     "        else:\n",
     "            self.V += 1\n",
-    "            self.graph[v.id] = []\n",
+    "            self.graph[v] = []\n",
     "            return 0\n",
     "    \n",
     "    def get_vertex(self, v_id: int):\n",
-    "        \n",
-    "        # ? This is no longer O(1) lookup!\n",
     "        for v in self.graph.keys():\n",
     "            if v.id == v_id:\n",
     "                return v\n",
-    "    \n",
+    "        raise KeyError(f\"Vertex with id {v_id} not found in graph.\")\n",
+    "\n",
     "    def get_edge(self):\n",
     "        pass\n",
     "            \n",
@@ -60,81 +61,88 @@
     "        v1 = self.get_vertex(src_id)\n",
     "        v2 = self.get_vertex(dest_id)\n",
     "        \n",
-    "        self.graph[v1.id].append((v2.id, weight))\n",
+    "        self.graph[v1].append((v2, weight))\n",
     "        if not self.is_directed:\n",
-    "            self.graph[v2.id].append((v1.id, weight))\n",
+    "            self.graph[v2].append((v1, weight))\n",
     "            \n",
     "        # TODO: How to implement Edge into basic graph structure?\n",
     "        # TODO: This approach is vertex based \n",
     "        # TODO: I guess one may choose between the approaches.\n",
     "        # TODO: For later problems like the flow-networks another graph strucute might be necessary (edge list)\n",
-    "        "
+    "    \n",
+    "    def breadth_first_search(self, v_start_id, *args):\n",
+    "        \"\"\"\n",
+    "        IN: starting vertex\n",
+    "        OUT: visited set\n",
+    "        \n",
+    "        TODO: Add tests cases!\n",
+    "        \"\"\"     \n",
+    "        v_start = self.get_vertex(v_start_id)\n",
+    "        visited = set()\n",
+    "        queue = deque([v_start])\n",
+    "        visited.add(v_start)\n",
+    "        while queue:\n",
+    "            curr_v = queue.popleft()\n",
+    "            for neighbour, _ in self.graph[curr_v]:\n",
+    "                if neighbour not in visited:\n",
+    "                    queue.append(neighbour)\n",
+    "                    visited.add(neighbour)\n",
+    "        return visited\n",
+    "    \n",
+    "    def depth_first_search(self, v_start_id, visited, *args):\n",
+    "        \"\"\"\n",
+    "        IN: starting vertex, set of traversed edges\n",
+    "        OUT: None\n",
+    "        \n",
+    "        TODO: Add tests cases!\n",
+    "        \"\"\"\n",
+    "        v_start = self.get_vertex(v_start_id)\n",
+    "        visited.add(v_start)\n",
+    "        if \n",
+    "        \n",
+    "        for neighbour, _ in self.graph[v_start]:\n",
+    "            if neighbour not in visited:\n",
+    "                self.depth_first_search(neighbour.id, visited)                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: [(1, 1337.0)], 1: [(0, 1337.0)]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = Graph()\n",
     "v = Vertex(0, 5)\n",
     "u = Vertex(1, 2)\n",
     "g.add_vertex(v)\n",
     "g.add_vertex(u)\n",
-    "\n",
-    "g.add_edge(0, 1, 1337.0)\n",
-    "\n",
-    "g.print_graph()"
+    "g.add_edge(0, 1, 1337.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<__main__.Vertex object at 0x0000018800126490>, <__main__.Vertex object at 0x00000188020F9E50>}\n"
+     ]
     }
    ],
    "source": [
-    "vertex = g.get_vertex(0)"
+    "traversed = set()\n",
+    "tree = g.depth_first_search(0, traversed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys([<__main__.Vertex object at 0x000001BC65187A90>, <__main__.Vertex object at 0x000001BC65187100>])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g.graph.keys()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
