Small change to graph class. Implemented Input method and started connected components program

--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
     "        print({v.id: [(edge[vertex].id, edge[weight]) for edge in edges] for v, edges in self.graph.items()})\n",
     "        return None\n",
     "    \n",
-    "    def add_vertex(self, v: Vertex):\n",
-    "        if v in self.graph.keys():\n",
-    "            print(\"Vertex already in graph.\")\n",
+    "    def add_vertex(self, v_id: int):\n",
+    "        if v_id in [v.id for v in self.graph.keys()]:\n",
+    "            #print(\"Vertex already in graph.\")\n",
     "            return 1\n",
     "        else:\n",
     "            self.V += 1\n",
-    "            self.graph[v] = []\n",
+    "            self.graph[Vertex(v_id)] = []\n",
     "            return 0\n",
     "    \n",
     "    def get_vertex(self, v_id: int):\n",
@@ -70,7 +70,28 @@
     "        # TODO: I guess one may choose between the approaches.\n",
     "        # TODO: For later problems like the flow-networks another graph strucute might be necessary (edge list)\n",
     "    \n",
-    "    def breadth_first_search(self, v_start_id, *args):\n",
+    "    def build_from_text(self, path):\n",
+    "        \"\"\" \n",
+    "        \"\"\"\n",
+    "        with open(path) as f:\n",
+    "            lines = f.readlines()\n",
+    "            for idx, line in enumerate(lines):\n",
+    "                if idx == 0:\n",
+    "                    continue \n",
+    "                \n",
+    "                src_id, dest_id = list(map(int, line.strip(\"\\t\\n\").split()))\n",
+    "                \n",
+    "                self.add_vertex(src_id)\n",
+    "                self.add_vertex(dest_id)\n",
+    "                \n",
+    "                src_vertex = self.get_vertex(src_id)\n",
+    "                dest_vertex = self.get_vertex(dest_id)\n",
+    "                \n",
+    "                self.add_edge(src_vertex.id, dest_vertex.id)\n",
+    "                \n",
+    "        return None\n",
+    "                \n",
+    "    def breadth_first_search(self, v_start_id, visited,*args):\n",
     "        \"\"\"\n",
     "        IN: starting vertex\n",
     "        OUT: visited set\n",
@@ -78,7 +99,7 @@
     "        TODO: Add tests cases!\n",
     "        \"\"\"     \n",
     "        v_start = self.get_vertex(v_start_id)\n",
-    "        visited = set()\n",
+    "        #visited = set()\n",
     "        queue = deque([v_start])\n",
     "        visited.add(v_start)\n",
     "        while queue:\n",
@@ -98,8 +119,7 @@
     "        \"\"\"\n",
     "        v_start = self.get_vertex(v_start_id)\n",
     "        visited.add(v_start)\n",
-    "        if \n",
-    "        \n",
+    "\n",
     "        for neighbour, _ in self.graph[v_start]:\n",
     "            if neighbour not in visited:\n",
     "                self.depth_first_search(neighbour.id, visited)                "
@@ -107,42 +127,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = Graph()\n",
-    "v = Vertex(0, 5)\n",
-    "u = Vertex(1, 2)\n",
-    "g.add_vertex(v)\n",
-    "g.add_vertex(u)\n",
-    "g.add_edge(0, 1, 1337.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{<__main__.Vertex object at 0x0000018800126490>, <__main__.Vertex object at 0x00000188020F9E50>}\n"
+      "15\n"
      ]
     }
    ],
    "source": [
-    "traversed = set()\n",
-    "tree = g.depth_first_search(0, traversed)"
+    "def main():\n",
+    "    \n",
+    "    # build graph\n",
+    "    g = Graph()\n",
+    "    g.build_from_text(\"sample_graphs/Graph1.txt\")\n",
+    "    visited = set() # global list of visited nodes\n",
+    "    components = [] # resulting list of components as Graph-objects\n",
+    "    \n",
+    "    for v_id in range(g.V):\n",
+    "        if v_id not in visited:\n",
+    "            visited.add(v_id) \n",
+    "            components.append(g.breadth_first_search(v_id, visited))\n",
+    "    print(len(components))\n",
+    "main()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# TODO: Methode Build from text - FINISHED\n",
+    "# TODO: Driver Programm Zusammenhangskomponennten - DOING\n",
+    "# TODO: Unit Tests in Python\n",
+    "# TODO: Unit Tests dafuer schreiben"
+   ]
   },
   {
    "cell_type": "code",
