--- a/graph.ipynb
+++ b/graph.ipynb
@@ -166,7 +166,9 @@
     "# TODO: Methode Build from text - FINISHED\n",
     "# TODO: Driver Programm Zusammenhangskomponennten - DOING\n",
     "# TODO: Unit Tests in Python\n",
-    "# TODO: Unit Tests dafuer schreiben"
+    "# TODO: Unit Tests dafuer schreiben\n",
+    "# ? remote: warning: GH001: Large files detected. \n",
+    "# ? You may want to try Git Large File Storage - https://git-lfs.github.com."
    ]
   },
   {
