Changes to connected components

--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,10 +24,11 @@
     "    \n",
     "    def __init__(self, is_directed=False, *args, **kwargs):\n",
     "        self.V = 0\n",
+    "        self.E = 0\n",
     "        self.graph = dict()\n",
     "        self.is_directed = is_directed\n",
     "    \n",
-    "    def print_graph(self):\n",
+    "    def print(self):\n",
     "        # Info: indices \n",
     "        vertex, weight = 0, 1\n",
     "        print({v.id: [(edge[vertex].id, edge[weight]) for edge in edges] for v, edges in self.graph.items()})\n",
@@ -64,7 +65,7 @@
     "        self.graph[v1].append((v2, weight))\n",
     "        if not self.is_directed:\n",
     "            self.graph[v2].append((v1, weight))\n",
-    "            \n",
+    "        self.E += 1\n",
     "        # TODO: How to implement Edge into basic graph structure?\n",
     "        # TODO: This approach is vertex based \n",
     "        # TODO: I guess one may choose between the approaches.\n",
@@ -91,26 +92,31 @@
     "                \n",
     "        return None\n",
     "                \n",
-    "    def breadth_first_search(self, v_start_id, visited,*args):\n",
+    "    def breadth_first_search(self, v_start_id, visited=set(), *args):\n",
     "        \"\"\"\n",
     "        IN: starting vertex\n",
     "        OUT: visited set\n",
     "        \n",
     "        TODO: Add tests cases!\n",
-    "        \"\"\"     \n",
+    "        \"\"\"\n",
+    "        g_bfs = Graph()\n",
     "        v_start = self.get_vertex(v_start_id)\n",
-    "        #visited = set()\n",
+    "        \n",
     "        queue = deque([v_start])\n",
     "        visited.add(v_start)\n",
+    "        \n",
     "        while queue:\n",
     "            curr_v = queue.popleft()\n",
+    "            g_bfs.add_vertex(curr_v.id)\n",
     "            for neighbour, _ in self.graph[curr_v]:\n",
     "                if neighbour not in visited:\n",
     "                    queue.append(neighbour)\n",
     "                    visited.add(neighbour)\n",
-    "        return visited\n",
+    "                    g_bfs.add_vertex(neighbour.id)\n",
+    "                    g_bfs.add_edge(curr_v.id, neighbour.id)\n",
+    "        return g_bfs\n",
     "    \n",
-    "    def depth_first_search(self, v_start_id, visited, *args):\n",
+    "    def depth_first_search(self, v_start_id, visited=set(), *args):\n",
     "        \"\"\"\n",
     "        IN: starting vertex, set of traversed edges\n",
     "        OUT: None\n",
@@ -122,19 +128,73 @@
     "\n",
     "        for neighbour, _ in self.graph[v_start]:\n",
     "            if neighbour not in visited:\n",
-    "                self.depth_first_search(neighbour.id, visited)                "
+    "                self.depth_first_search(neighbour.id, visited)\n",
+    "                \n",
+    "    def get_connected_component(self, v: Vertex, visited: set):\n",
+    "        result = []\n",
+    "        queue = deque([v])\n",
+    "        while queue:\n",
+    "            vertex = queue.popleft()\n",
+    "            visited.add(vertex.id)\n",
+    "            result.append(vertex)\n",
+    "            for neighbour, _ in self.graph[vertex]:\n",
+    "                if neighbour.id not in visited:\n",
+    "                    queue.append(neighbour)         \n",
+    "        return result, visited  \n",
+    "    \n",
+    "    def get_all_connected_components(self):\n",
+    "        visited = set()\n",
+    "        result = []\n",
+    "        for vertex in self.graph.keys():\n",
+    "            if vertex.id not in visited:\n",
+    "                component, visited = self.get_connected_component(vertex, visited)\n",
+    "                result.append(component)\n",
+    "        return result   \n",
+    "    \n",
+    "    def prim(self):\n",
+    "        pass\n",
+    "    def kruskal(self):\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_connected_components(G: Graph):\n",
+    "    def get_connected_component(v: Vertex, visited: set):\n",
+    "        result = []\n",
+    "        queue = deque([v])\n",
+    "        while queue:\n",
+    "            vertex = queue.popleft()\n",
+    "            visited.add(vertex.id)\n",
+    "            result.append(vertex)\n",
+    "            for neighbour, _ in G.graph[vertex]:\n",
+    "                if neighbour.id not in visited:\n",
+    "                    queue.append(neighbour)         \n",
+    "        return result, visited\n",
+    "\n",
+    "    visited = set()\n",
+    "    result = []\n",
+    "    for vertex in G.graph.keys():\n",
+    "        if vertex.id not in visited:\n",
+    "            component, visited = G.get_connected_component(vertex, visited)\n",
+    "            result.append(component)\n",
+    "    return result  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "4\n"
      ]
     }
    ],
@@ -143,22 +203,18 @@
     "    \n",
     "    # build graph\n",
     "    g = Graph()\n",
-    "    g.build_from_text(\"sample_graphs/Graph1.txt\")\n",
-    "    visited = set() # global list of visited nodes\n",
-    "    components = [] # resulting list of components as Graph-objects\n",
+    "    g.build_from_text(\"sample_graphs/Graph3.txt\")\n",
     "    \n",
-    "    for v_id in range(g.V):\n",
-    "        if v_id not in visited:\n",
-    "            visited.add(v_id) \n",
-    "            components.append(g.breadth_first_search(v_id, visited))\n",
+    "    components = get_connected_components(g)\n",
     "    print(len(components))\n",
+    "\n",
     "main()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
