Added test cases for component feature. Moved Graph implementation from .pynb to .py file for better handling

--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,12 @@
     "\"\"\"        \n",
     "class Graph:\n",
     "    \n",
-    "    def __init__(self, is_directed=False, *args, **kwargs):\n",
+    "    def __init__(self, is_directed=False, is_weighted=False, *args, **kwargs):\n",
     "        self.V = 0\n",
     "        self.E = 0\n",
     "        self.graph = dict()\n",
     "        self.is_directed = is_directed\n",
+    "        self.is_weighted = is_weighted\n",
     "    \n",
     "    def print(self):\n",
     "        # Info: indices \n",
@@ -80,15 +81,19 @@
     "                if idx == 0:\n",
     "                    continue \n",
     "                \n",
-    "                src_id, dest_id = list(map(int, line.strip(\"\\t\\n\").split()))\n",
-    "                \n",
+    "                if self.is_weighted:\n",
+    "                    src_id, dest_id, weight = line.strip(\"\\t\\n\").split()\n",
+    "                    src_id, dest_id, weight = int(src_id), int(dest_id), float(weight)\n",
+    "                else:\n",
+    "                    src_id, dest_id = list(map(int, line.strip(\"\\t\\n\").split()))\n",
+    "                    \n",
     "                self.add_vertex(src_id)\n",
     "                self.add_vertex(dest_id)\n",
     "                \n",
     "                src_vertex = self.get_vertex(src_id)\n",
     "                dest_vertex = self.get_vertex(dest_id)\n",
     "                \n",
-    "                self.add_edge(src_vertex.id, dest_vertex.id)\n",
+    "                self.add_edge(src_vertex.id, dest_vertex.id, weight)\n",
     "                \n",
     "        return None\n",
     "                \n",
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,28 +192,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main():\n",
     "    \n",
-    "    # build graph\n",
+    "    g = Graph(is_weighted=True)\n",
+    "    g.build_from_text(\"sample_graphs/G_1_2.txt\")\n",
+    "\n",
+    "main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "class TestComponents(unittest.TestCase):\n",
+    "\n",
+    "    def test_graph1(self):\n",
+    "        g = Graph()\n",
+    "        g.build_from_text(\"sample_graphs/Graph1.txt\")\n",
+    "        no_components = len(get_connected_components(g))\n",
+    "        self.assertEqual(no_components, 2)\n",
+    "        \n",
+    "    def test_graph2(self):\n",
+    "        g = Graph()\n",
+    "        g.build_from_text(\"sample_graphs/Graph2.txt\")\n",
+    "        no_components = len(get_connected_components(g))\n",
+    "        self.assertEqual(no_components, 4)\n",
+    "        \n",
+    "    def test_graph3(self):\n",
     "    g = Graph()\n",
     "    g.build_from_text(\"sample_graphs/Graph3.txt\")\n",
-    "    \n",
-    "    components = get_connected_components(g)\n",
-    "    print(len(components))\n",
+    "    no_components = len(get_connected_components(g))\n",
+    "    self.assertEqual(no_components, 4)\n",
+    "        \n",
     "\n",
-    "main()\n",
     "    "
    ]
   },
