Huge commit. Implementation and BFS work. Check why larger graphs take so long?

--- a/src/unused_code/OLD_graph.ipynb
+++ b/src/unused_code/OLD_graph.ipynb
@@ -135,7 +135,7 @@
     "            if neighbour not in visited:\n",
     "                self.depth_first_search(neighbour.id, visited)\n",
     "                \n",
-    "    def get_connected_component(self, v: Vertex, visited: set):\n",
+    "    # def get_connected_component(self, v: Vertex, visited: set):\n",
     "        result = []\n",
     "        queue = deque([v])\n",
     "        while queue:\n",
